--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint":"standard --fix"
+    "lint": "standard --fix"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -20,10 +22,10 @@
     "standard": "^17.0.0",
     "vite": "^3.0.7"
   },
-    "eslintConfig": {
-      "extends": [
-        "standard",
-        "standard-jsx"
-      ]
-    }
+  "eslintConfig": {
+    "extends": [
+      "standard",
+      "standard-jsx"
+    ]
+  }
 }
